; ModuleID = '/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_mt__index.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_mt__index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [53 x i8] c"critical internal indexing error: no metatable found\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"critical internal indexing error: not a metatable\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"__index__\00", align 1
@.str.3 = private unnamed_addr constant [62 x i8] c"critical internal indexing error: __index__ is not a function\00", align 1
@LUA_MULTRET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaT_mt__index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaT_mt__index(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @lua_getmetatable(i32* %5, i32 1)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @luaL_error(i32* %9, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @lua_istable(i32* %12, i32 -1)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @luaL_error(i32* %16, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %11
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @lua_getfield(i32* %19, i32 -1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @lua_isnil(i32* %21, i32 -1)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %47, label %24

24:                                               ; preds = %18
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @lua_isfunction(i32* %25, i32 -1)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %24
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 @luaL_error(i32* %29, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.3, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %24
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @lua_pushvalue(i32* %32, i32 1)
  %34 = load i32*, i32** %3, align 8
  %35 = call i32 @lua_pushvalue(i32* %34, i32 2)
  %36 = load i32*, i32** %3, align 8
  %37 = load i32, i32* @LUA_MULTRET, align 4
  %38 = call i32 @lua_call(i32* %36, i32 2, i32 %37)
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @lua_toboolean(i32* %39, i32 -1)
  store i32 %40, i32* %4, align 4
  %41 = load i32*, i32** %3, align 8
  %42 = call i32 @lua_pop(i32* %41, i32 1)
  %43 = load i32, i32* %4, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %31
  store i32 1, i32* %2, align 4
  br label %55

46:                                               ; preds = %31
  br label %50

47:                                               ; preds = %18
  %48 = load i32*, i32** %3, align 8
  %49 = call i32 @lua_pop(i32* %48, i32 1)
  br label %50

50:                                               ; preds = %47, %46
  %51 = load i32*, i32** %3, align 8
  %52 = call i32 @lua_pushvalue(i32* %51, i32 2)
  %53 = load i32*, i32** %3, align 8
  %54 = call i32 @lua_gettable(i32* %53, i32 -2)
  store i32 1, i32* %2, align 4
  br label %55

55:                                               ; preds = %50, %45
  %56 = load i32, i32* %2, align 4
  ret i32 %56
}

declare dso_local i32 @lua_getmetatable(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @lua_istable(i32*, i32) #1

declare dso_local i32 @lua_getfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_isfunction(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_gettable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
